--- a/calc.html
+++ b/calc.html
@@ -25,7 +25,8 @@
                         <option value="-1">|----------------------请选择从者-------------------------|</option>
                     </select>
                     <label for="ckIsMaxGrail">
-                        <input type="checkbox" id="ckIsMaxGrail" />圣杯MAX</label>
+                        <input type="checkbox" id="ckIsMaxGrail" />圣杯MAX
+		    </label>
                     <input type="text" id="txtKey" class="search" list="dlTips" autofocus />
                     <input type="button" id="btnSearch" value="查询" />&nbsp;
                     <datalist id="dlTips"></datalist>
