--- a/calc2.html
+++ b/calc2.html
@@ -110,11 +110,6 @@
                 </td>                
             </tr>
             <tr>
-                <td>Hit数</td>
-                <td>
-                    <input type="text" id="txtNHits" size=10px />
-                    <input type="button" value="全鞭尸" id="btnAdjOverkill" />
-                </td>
                 <td>宝具等级</td>
                 <td>
                     <select id="ddlNpLevel">
@@ -132,12 +127,6 @@
                 <td>
                     <input type="text" id="txtNpCoefficient" />
                 </td>
-            </tr>
-            <tr>
-                <td>目标数</td>
-                <td>
-                    <input type="text" id="txtNTarget" />
-                </td>
                 <td>OC等级</td>
                 <td>
                     <select id="ddlOvercharge" oldvalue = "oc1">
@@ -148,6 +137,143 @@
                         <option value="oc5">5</option>
                     </select>
                 </td>
+                <td>目标数</td>
+                <td>
+                    <input type="text" id="txtNTarget" />
+                </td>
+            </tr>
+	    <tr>
+                <td>技能1</td>
+                <td>
+                    <select id="ddlSkill1">
+                        <option value="0">无</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                    </select>
+                </td>
+                <td>技能2</td>
+                <td>
+                    <select id="ddlSkill2">
+                        <option value="0">无</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                    </select>
+                </td>
+                <td>技能3</td>
+                <td>
+                    <select id="ddlSkill3">
+                        <option value="0">无</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                    </select>
+                </td>
+                <td>Hit数</td>
+                <td>
+                    <input type="text" id="txtNHits" size=10px />
+                    <input type="button" value="全鞭尸" id="btnAdjOverkill" />
+                </td>
+	    </tr>
+            <tr>
+                <td>概念礼装</td>
+                <td>
+                    <select id="ddlCraftEssence">
+                        <option value="0">自定义</option>
+                        <option value="1">20级宝石</option>
+                        <option value="2">100级醉贞</option>
+                        <option value="3">100级空骑</option>
+                        <option value="4">100级相扑</option>
+                        <option value="5">80级黑杯</option>
+                        <option value="6">20级潜水学妹</option>
+                        <option value="7">20级北斋</option>
+                        <option value="8">15级泳装樱</option>
+                        <option value="9">100级轨迹</option>
+                    </select>
+                </td>
+                <td>敌人1</td>
+                <td>
+                    <select id="ddlEnemyClass1">
+                        <option value="1.0">Default</option>
+                        <option value="0.8">Berserker</option>
+                        <option value="0.9">Assassin</option>
+                        <option value="1.1">Rider</option>
+                        <option value="1.2">Caster/MC</option>
+                    </select>
+                    <label for="ckIsUndying1">
+                        <input type="checkbox" id="ckIsUndying1" value="1" /> 死灵
+                    </label>
+                </td>
+                <td>敌人2</td>
+                <td>
+                    <select id="ddlEnemyClass2">
+                        <option value="1.0">Default</option>
+                        <option value="0.8">Berserker</option>
+                        <option value="0.9">Assassin</option>
+                        <option value="1.1">Rider</option>
+                        <option value="1.2">Caster/MC</option>
+                    </select>
+                    <label for="ckIsUndying2">
+                        <input type="checkbox" id="ckIsUndying2" value="1" /> 死灵
+                    </label>
+                </td>
+                <td>敌人3</td>
+                <td>
+                    <select id="ddlEnemyClass3">
+                        <option value="1.0">Default</option>
+                        <option value="0.8">Berserker</option>
+                        <option value="0.9">Assassin</option>
+                        <option value="1.1">Rider</option>
+                        <option value="1.2">Caster/MC</option>
+                    </select>
+                    <label for="ckIsUndying3">
+                        <input type="checkbox" id="ckIsUndying3" value="1" /> 死灵
+                    </label>
+                </td>
+            </tr>
+	    <tr>
+                <td>御主礼装</td>
+                <td>
+                    <select id="ddlMysticCode">
+                        <option value="0">无</option>
+                        <option value="1">战斗服</option>
+                        <option value="2">04服</option>
+                        <option value="3">骑士王服</option>
+                        <option value="4">初始服</option>
+                        <option value="5">西服</option>
+                        <option value="6">泳装</option>
+                        <option value="7">月海</option>
+                        <option value="8">月背</option>
+                        <option value="9">极地服</option>
+                        <option value="10">夏威夷衫</option>
+                        <option value="11">新年服</option>
+                        <option value="12">宇航服</option>
+                    </select>
+                </td>
+	    </tr>
+            <tr>
                 <td>职介克制</td>
                 <td>
                     <select id="ddlClassResist">
@@ -203,81 +329,7 @@
                     <input type="text" id="txtNpGainBuff" value="0" />
                 </td>
             </tr>
-	    <tr>
-                <td>概念礼装</td>
-                <td>
-                    <select id="ddlCraftEssence">
-                        <option value="0">自定义</option>
-                        <option value="1">20级宝石</option>
-                        <option value="2">100级醉贞</option>
-                        <option value="3">100级空骑</option>
-                        <option value="4">100级相扑</option>
-                        <option value="5">80级黑杯</option>
-                        <option value="6">20级潜水学妹</option>
-                        <option value="7">20级北斋</option>
-                        <option value="8">15级泳装樱</option>
-                        <option value="9">100级轨迹</option>
-                    </select>
-                </td>
-		<td>敌人1</td>
-		<td>
-		    <select id="ddlEnemyClass1">
-                        <option value="1.0">Default</option>
-                        <option value="0.8">Berserker</option>
-                        <option value="0.9">Assassin</option>
-                        <option value="1.1">Rider</option>
-                        <option value="1.2">Caster/MC</option>
-                    </select>
-		    <label for="ckIsUndying1">
-                        <input type="checkbox" id="ckIsUndying1" value="1" /> 死灵
-                    </label>
-		</td>
-		<td>敌人2</td>
-		<td>
-                    <select id="ddlEnemyClass2">
-                        <option value="1.0">Default</option>
-                        <option value="0.8">Berserker</option>
-                        <option value="0.9">Assassin</option>
-                        <option value="1.1">Rider</option>
-                        <option value="1.2">Caster/MC</option>
-                    </select>
-                    <label for="ckIsUndying2">
-                        <input type="checkbox" id="ckIsUndying2" value="1" /> 死灵
-                    </label>
-		</td>
-                <td>敌人3</td>
-                <td>
-                    <select id="ddlEnemyClass3">
-                        <option value="1.0">Default</option>
-                        <option value="0.8">Berserker</option>
-                        <option value="0.9">Assassin</option>
-                        <option value="1.1">Rider</option>
-                        <option value="1.2">Caster/MC</option>
-                    </select>
-                    <label for="ckIsUndying3">
-                        <input type="checkbox" id="ckIsUndying3" value="1" /> 死灵
-                    </label>
-                </td>
-	    </tr>
             <tr>
-                <td>御主礼装</td>
-                <td>
-                    <select id="ddlMysticCode">
-                        <option value="0">无</option>
-                        <option value="1">战斗服</option>
-                        <option value="2">04服</option>
-                        <option value="3">骑士王服</option>
-                        <option value="4">初始服</option>
-                        <option value="5">西服</option>
-                        <option value="6">泳装</option>
-                        <option value="7">月海</option>
-                        <option value="8">月背</option>
-                        <option value="9">极地服</option>
-                        <option value="10">夏威夷衫</option>
-                        <option value="11">新年服</option>
-                        <option value="12">宇航服</option>
-                    </select>
-                </td>
                 <td>敌人1鞭尸</td>
                 <td>
                     <input type="text" id="txtOverkill1" value="0" />
